<resources>
    <string name="app_name">PackbackApp</string>

    <string name="foto_perfil">Foto do perfil</string>
    <string name="nome_padrao">João Guimarães Rosa</string>
    <string name="banner_topo">Banner do topo</string>
    <string name="data_inicio_padrao">Coletando desde abril de 2019</string>
    <string name="coletas_padrao">53</string>
    <string name="coletas_solicitadas">COLETAS SOLICITADAS</string>
    <string name="materiais_padrao">120 kg</string>
    <string name="materiais_reciclados">MATERIAIS RECICLADOS</string>
    <string name="solicitar_coleta">SOLICITAR COLETA</string>
    <string name="todas_coletas">Todas as coletas</string>
    <string name="ico_todas_coletas">Vai para lista de todas as coletas</string>
    <string name="login_email">Email:</string>
    <string name="login_senha">Senha:</string>
    <string name="login_esq_senha">Esqueci minha senha</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_cadastrar">Criar conta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="embalagens">Embalagens</string>
    <string name="enderecos">Endereços</string>
    <string name="buscar_produtos">BUSCAR PRODUTOS</string>

</resources>
