<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <TextView
        android:id="@+id/login_email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_email"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/login_email_txt"
        app:layout_constraintTop_toBottomOf="@id/login_email_txt"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/login_senha_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_senha"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/login_email"
        app:layout_constraintTop_toBottomOf="@id/login_email" />

    <EditText
        android:id="@+id/login_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/login_senha_txt"
        app:layout_constraintTop_toBottomOf="@id/login_senha_txt"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/login_esq_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="@id/login_senha"
        app:layout_constraintStart_toStartOf="@id/login_senha"
        app:layout_constraintTop_toBottomOf="@id/login_senha"
        android:text="@string/login_esq_senha" />

    <Button
        android:id="@+id/login_entrar_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/login_entrar"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_esq_senha" />

    <TextView
        android:id="@+id/login_cadastrar_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="@id/login_entrar_btn"
        app:layout_constraintStart_toStartOf="@id/login_entrar_btn"
        app:layout_constraintTop_toBottomOf="@id/login_entrar_btn"
        android:text="@string/login_cadastrar" />

</androidx.constraintlayout.widget.ConstraintLayout>